# libs-c-xpack

./: CHANGELOG.md  CMakeLists.txt  README-MAINTAINER.md  README.md  meson.build  package-lock.json  package.json
include/newlib/: c-syscalls.h
meta/: CMakeLists.txt  micro-os-plus-libs-c-config-version.cmake  micro-os-plus-libs-c-config.cmake  xpack-helper.cmake
sources/: CMakeLists.txt
sources/src/stdlib/: exit.c
src/: _sbrk.c  c-syscalls-empty.c  c-syscalls-empty.cpp
src/stdlib/: assert.c  atexit.cpp  atexit.h  exit.c  init-fini.c  timegm.c
